--- a/components/styles/Header.module.css
+++ b/components/styles/Header.module.css
@@ -3,7 +3,7 @@
 
 .container {
   box-shadow: drop;
-  padding: 7px 15px;
+  padding: 7px 0;
 }
 
 .inner {
